add jung kai name

--- a/index_kenneth.html
+++ b/index_kenneth.html
@@ -2,5 +2,6 @@ Kenneth Phang Tak Yan xxx
 Zhang Yuting
 Goh Wei Sheng Wilson
 Goh Wei Sheng Wilson
-Lee Chee Siang               
+Lee Chee Siang 
+Yang Jung Kai              
 
