modified Kenneth's file by Wui Koon

--- a/index_kenneth.html
+++ b/index_kenneth.html
@@ -1,6 +1,8 @@
 Kenneth Phang Tak Yan xxx
+Lim Wui Koon
 Zhang Yuting
 Goh Wei Sheng Wilson
 Goh Wei Sheng Wilson
-Lee Chee Siang               
+Lee Chee Siang
+            
 
