--- a/index_kenneth.html
+++ b/index_kenneth.html
@@ -1,6 +1,7 @@
-Kenneth Phang Tak Yan xxx
 Zhang Yuting
 Goh Wei Sheng Wilson
 Goh Wei Sheng Wilson
-Lee Chee Siang
+Lee Chee Siang               
+Shang Liangliang Update here.
+Koh Hong Wei
 Keoh Wei Pien
