Keoh branching out

--- a/index_kenneth.html
+++ b/index_kenneth.html
@@ -1,7 +1,10 @@
+Kenneth Phang Tak Yan xxx
+Juen Ming
 Zhang Yuting
-Goh Wei Sheng Wilson
 Goh Wei Sheng Wilson
 Lee Chee Siang               
 Shang Liangliang Update here.
 Koh Hong Wei
+Tan Mei Jing
+Kenny Chua Ming Shu 
 Keoh Wei Pien
