--- a/index_kenneth.html
+++ b/index_kenneth.html
@@ -1,11 +1,8 @@
-<<<<<<< HEAD
 Kenneth Phang Tak Yan xxx
 Kerk Chern
-
-=======
 Zhang Yuting
 Goh Wei Sheng Wilson
 Lee Chee Siang               
-Shang Liangliang Update here.
+Shang Liangliang
 Koh Hong Wei
->>>>>>> master
+
