--- a/index_kenneth.html
+++ b/index_kenneth.html
@@ -23,7 +23,5 @@ Koh Hong Wei
 Syed Khair
 Tan Mei Jing
 Kenny Chua Ming Shu 
-<<<<<<< HEAD
-=======
 Lin Yucheng
->>>>>>> e7f1b86da5c79dd3fb64ac2213f4243fab4b5496
+Tan Chun Ket
