--- a/index_kenneth.html
+++ b/index_kenneth.html
@@ -10,9 +10,8 @@ Lam Weng Cong
 Lee Chee Siang               
 Shang Liangliang Update here.
 Koh Hong Wei
-Zhuang Yi 
-
-
+Foo Shi You
+Zhuang Yi Ter
 
 
 
