--- a/index_kenneth.html
+++ b/index_kenneth.html
@@ -4,7 +4,7 @@ Goh Wei Sheng Wilson
 Nasruddinbaa
 P1314782
 Juen Ming
-Zhang Yuting
+TesZhang Yuting
 Goh Wei Sheng Wilson
 Lee Chee Siang 
 Lam Weng Cong            
@@ -39,4 +39,4 @@ Lin Yucheng
 
 
 
-Han Su Yin
+Han Su Yin Testing
